[package]
name = "unispot-sdk-cw"
version = "1.2.0"
authors = ["UniSpot Data Foundation"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://unispot.network"
repository = "https://github.com/unispot-network/unispot-crosschain"
description = "Data structures and utilites for the UniSpot price oracle"
keywords = [ "unispot", "oracle", "cosmwasm" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
osmosis=[]

[dependencies]
unispot-sdk = "0.7.0"
cosmwasm-std = { version = "1.0.0" }
cosmwasm-schema = "1.1.9"
thiserror = "1.0.20"
